  Src/Languages/Bulgarian: MergeBulgarian.rc
  Docs/Users/Languages: Readme-Bulgarian.txt
  Docs/Users/Contributors.txt
  InnoSetup: WinMerge.iss
  ShellExtension: ShellExtension.rc
  ShellExtension/Languages: ShellExtensionBulgarian.rc
 PATCH: [ 1545890 ] Swedish translation for update for WinMerge 2.5.5.7+
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2006-08-23 Kimmo
 PATCH: [ 1544905 ] Use stat() to check if file is read-only
  Src: files.cpp files.h
 PATCH: [ 1544777 ] Compare by size
  Src: DiffWrapper.h DirScan.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2006-08-22 Gal
 PATCH: [ 1541427 ] Using as an external diff tool (RFE 1454623)
  Src: MainFrm.cpp MainFrm.h MergeArgs.cpp MergeDoc.cpp

2006-08-22 Gal
 PATCH: [ 1544784 ] Use as ClearCase external merge tool
  Src: MergeArgs.cpp

2006-08-22 Gal
 BUG: [ 1543783 ] Misbehave margin draw
  Src/editlib: ccrystaltextview.cpp

2006-08-22 Kimmo
 PATCH: [ 1544147 ] Add Install-feature for file filters
  Src: FileFiltersDlg.cpp FileFiltersDlg.h Merge.rc resource.h
  Src/Languages/*: Merge*.rc
 BUG: [ 1534429 ] Message IDS_SUGGEST_IGNOREEOL incorrect
  Src: MergeDoc.cpp

2006-08-20 Kimmo
 PATCH: [ 1424673 ] Widen labels on OpenDialog
  Submitted by Perry
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-08-19 Kimmo
 PATCH: [ 1542201 ] Change default user filter folder to WinMerge/Filters
  Src: MainFrm.cpp
 PATCH: [ 1542829 ] Rename Format-item in File-menu to Convert
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-08-17 Kimmo
 PATCH: [ 1540090 ] Change horizontal scroll synch from relative to absolute
  Src/Common: SplitterWndEx.cpp

2006-08-17 Gal
 PATCH: [ 1541158 ] New high-color toolbar icons
  Src: BCMenu.cpp MainFrm.cpp MainFrm.h Merge.rc resource.h
  Src/res: ToolbarDisabled.bmp ToolbarEnabled.bmp

2006-08-16 Takashi
 PATCH: [ 1539568 ] draw icon at modified line (it was changed to line revision marks)
  Src: GhostTextBuffer.cpp GhostTextBuffer.h MergeDoc.cpp MergeDoc.h