@@ -16,6 +16,9 @@ Add new items to top.
  PATCH: [ 1545890 ] Swedish translation for update for WinMerge 2.5.5.7+
   Submitted by Hans Eriksson
   Src/Languages/Swedish: MergeSwedish.rc
+ BUG: [ 1545082 ] Crash when comparing .rc files
+  Fix submitted by Takashi
+  Src/editlib: ccrystaltextview.cpp
 
 2006-08-23 Kimmo
  PATCH: [ 1544905 ] Use stat() to check if file is read-only
